# praborrow-sidl

./: Cargo.toml  README.md  README_ID.md
src/: error.rs  lexer.rs  lib.rs  parser.rs
tests/: example.sidl  test_macro.rs
