[package]
name = "praborrow-sidl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for Stable IDL (SIDL) and Diplomat trait generation."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.96", features = ["full", "extra-traits"] }
quote = "1.0.38"
proc-macro2 = "1.0.93"
