[package]
name = "praborrow-sidl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for Stable IDL (SIDL) and Diplomat trait generation."

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
thiserror = { workspace = true }
crc64fast = "1.0"


[dev-dependencies]
praborrow-diplomacy = { path = "../praborrow-diplomacy" }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
